--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
@@ -39,19 +39,32 @@
 
                         <div class="col-md-5">
 
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch name.</span>
                                 <input type="text" class="form-control" name="Filter.Branch_Name" placeholder="Enter Branch name to search." />
                                 <input type="hidden" id="hdnBranch_ID" name="Branch.Branch_ID" value="@Model.Branch.Branch_ID">
-                            </div>
+                            </div>*@
+                            @* LookUp Code Added by Vinod Mane on 23/09/2016*@
+                            <div class="form-group auto-complete">
+                                <div class="input-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch name.</span>
+                                </div>
+                                <div class="input-group">
+                                    <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Branch_Name" id="txtBranch_Name" placeholder="Enter Branch name to search." data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branch Name">
+                                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                    <input type="hidden" id="hdnBranch_ID" name="Branch.Branch_ID" value="@Model.Branch.Branch_ID"> 
+                                    <input type="hidden" id="hdnBranchID" value="" name="Filter.Branch_Name" class="auto-complete-value" />
 
+                                </div>
+                            </div>
+                            @*End*@
                         </div>
 
                         <div class="col-md-7" style="text-align: right; padding-top: 30px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreateBranch">Create</button>
-                                <button class="btn btn-danger active" role="button" value="Edit" id="btnEditBranch">Edit</button>
+                                <button class="btn btn-danger active" role="button" style="display:none" value="Edit" id="btnEditBranch">Edit</button>
                             </div>
 
                         </div>
