--- a/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Size/Index.cshtml
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="form-group" style="margin-bottom: 5px; float: right;">
-
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Set active.</span>@* Added by Vinod mane on 19/09/2016*@
                         <label class="switch">
 
                             @if (Model.SizeGroup.IsActive == 0)
@@ -81,10 +81,21 @@
 
                 <h4 style="margin-top: 0px;">Size group listing.</h4>
 
-                <div class="form-group">
-                    @*<label>Create / Update size group:</label>*@
+                @*<div class="form-group">
+                    @*<label>Create / Update size group:</label>*
                     <input type="text" class="form-control" name="Filter.Size_Group_Name" placeholder="Enter size group to search" />
+                </div>*@
+                @* LookUp Code Added by Vinod Mane on 20/09/2016*@
+                <div class="form-group auto-complete">
+                    <div class="input-group">
+                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Size_Group_Name" id="txtSize_Group_Name" placeholder="Enter size group to search." data-table="Size_Group" data-col="Size_Group_Id,Size_Group_Name" data-headernames="Size Group Name">
+                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                        @*<input type="hidden" name="Filter.Vendor_Id" id="hdnVendorID">*@
+                        <input type="hidden" id="hdnSize_Group_Name" value="" name="Filter.Size_Group_Name" class="auto-complete-value" />
+
+                    </div>
                 </div>
+                @*End*@
 
                 <div class="list-group border-bottom push-down-20" id="Size_Group_Name_Grid">
                    
