--- a/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Tax/Index.cshtml
@@ -14,7 +14,6 @@
     <li class="active">Tax Management</li>
 </ul>
 <!-- END BREADCRUMB -->
-
 <!-- START CONTENT FRAME -->
 <div class="content-frame">
 
@@ -34,73 +33,85 @@
 
         <div class="col-md-6" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 517px;">
 
-             <h4 style="margin-top: 0px;">Tax listing.</h4>
+            <h4 style="margin-top: 0px;">Tax listing.</h4>
 
-                <div class="form-group">
-                    @*<label>Create / Update size group:</label>*@
-                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
-                    <input type="text" class="form-control" name="Filter.Tax_Name" placeholder="Enter tax name to search" />
+            @*<div class="form-group">
+                @*<label>Create / Update size group:</label>
+            <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
+            <input type="text" class="form-control" name="Filter.Tax_Name" placeholder="Enter tax name to search" />
+        </div>*@       
+            @* LookUp Code Added by Vinod Mane on 23/09/2016*@
+            <div class="form-group auto-complete">
+                <div class="input-group">
+                    <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Tax_Name" id="txtTax_Name" placeholder="Enter tax name to search." data-table="Tax" data-col="Tax_ID,Tax_Name" data-headernames="Tax Name">
+                    <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                  
+                    <input type="hidden" id="hdnTax_Name" value="" name="Filter.Tax_Name" class="auto-complete-value" />
+
                 </div>
-
-               <div class="list-group border-bottom push-down-20" id="Tax_Grid">
-
-               </div>
-
-              <div class="row">
-                <div class="col-md-12" style="padding: 0px;text-align:center;" id="divTaxPager">
-
-				</div>
             </div>
+            @*End*@
+
+        <div class="list-group border-bottom push-down-20" id="Tax_Grid">
 
         </div>
 
-        <div class="col-md-6" style="padding: 10px; height: 517px;">
+        <div class="row">
+            <div class="col-md-12" style="padding: 0px;text-align:center;" id="divTaxPager">
 
-            <div class="block">
-                <h4 style="margin-top: 0px;">Create - Update tax.</h4>
-
-                <form role="form" id="frmTax">
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
-                        <input type="text" class="form-control" placeholder="Enter tax name." name="Tax.Tax_Name" />
-                        <input type="hidden" name="Tax.Tax_Id">
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax value</span>
-                        <input type="text" class="form-control" placeholder="Enter tax value (in percentage)." name="Tax.Tax_Value" />
-                    </div>
-
-                   
-                   
-                    <div class="form-group" style="margin-bottom: 5px; float: right;">
-                        <label class="switch">
-                                @if (Model.Tax.IsActive == 0)
-                                {
-                                    <input value="@Model.Tax.IsActive" name="Tax.IsActive" type="checkbox" id="Flag">
-                                }
-                                else
-                                {
-                                    <input value="@Model.Tax.IsActive" name="Tax.IsActive" checked="checked" type="checkbox" id="Flag">
-                                }
-                                @*<input checked="" id="Flag" value="0" type="checkbox">*@
-                            <span></span>
-                        </label>
-                    </div>
-                   
-
-                    <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px;">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-success active" id="btnSaveTax">Save</button>
-                            <button type="reset" class="btn btn-danger active">Cancel</button>
-                        </div>
-                    </div>
-
-                </form>
             </div>
-
         </div>
 
     </div>
+
+    <div class="col-md-6" style="padding: 10px; height: 517px;">
+
+        <div class="block">
+            <h4 style="margin-top: 0px;">Create - Update tax.</h4>
+
+            <form role="form" id="frmTax">
+                <div class="form-group">
+                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax name</span>
+                    <input type="text" class="form-control" placeholder="Enter tax name." name="Tax.Tax_Name" />
+                    <input type="hidden" name="Tax.Tax_Id">
+                </div>
+
+                <div class="form-group">
+                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Tax value</span>
+                    <input type="text" class="form-control" placeholder="Enter tax value (in percentage)." name="Tax.Tax_Value" />
+                </div>
+
+
+
+                <div class="form-group" style="margin-bottom: 5px; float: right;">
+                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Set active.</span>@* Added by Vinod mane on 23/09/2016*@
+                    <label class="switch">
+                        @if (Model.Tax.IsActive == 0)
+                                {
+                            <input value="@Model.Tax.IsActive" name="Tax.IsActive" type="checkbox" id="Flag">
+                                }
+                                else
+                                {
+                            <input value="@Model.Tax.IsActive" name="Tax.IsActive" checked="checked" type="checkbox" id="Flag">
+                                }
+                        @*<input checked="" id="Flag" value="0" type="checkbox">*@
+                        <span></span>
+                    </label>
+                </div>
+
+
+                <div style="padding-left: 0px; padding-top: 0px; padding-bottom: 20px; margin-bottom: 15px;">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-success active" id="btnSaveTax">Save</button>
+                        <button type="reset" class="btn btn-danger active">Cancel</button>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
+    </div>
+
+</div>
 
 </div>
