--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -57,19 +57,19 @@
 
         <div class="row">
 
-            <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
+    <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
 
-                <div class="block" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
+        <div class="block" id="Searchcustomer" style="border-bottom: 1px solid #DDD; padding-bottom:20px;margin-bottom:0px; ">
 
-                    <h4 style="margin-top: 0px;">Search customer.</h4>
-                    
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no.</span>
-                        <input class="mask_mobile_no form-control" placeholder="Enter mobile number." name="Customer.Mobile" id="txtMobileNo" value="@Model.Customer.Mobile"  data-toggle="modal" data-target="#myModalCustomer" />
-                        <input type="hidden" id="hdnMobileNo" value="@Model.Customer.Mobile">
-                     </div>
+            <h4 style="margin-top: 0px;">Search customer.</h4>
 
-                </div>
+            <div class="form-group">
+                <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no.</span>
+                <input class="mask_mobile_no form-control" placeholder="Enter mobile number." name="Customer.Mobile" id="txtMobileNo" value="@Model.Customer.Mobile" data-toggle="modal" data-target="#myModalCustomer" />
+                <input type="hidden" id="hdnMobileNo" value="@Model.Customer.Mobile">
+            </div>
+
+        </div>
                 <div class="block">
 
                     <h4 style="margin-top: 15px;">Primary information.</h4>
@@ -117,6 +117,102 @@
                     </div> 
         </div>
     </div>
+
+    <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
+
+                <div class="block">
+
+                    <h4 style="margin-top: 0px;">Secondary information.</h4>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse name.</span>
+                        <input type="text" class="form-control" placeholder="Enter spouse name." name="Customer.Customer_Spouse_Name" value="@Model.Customer.Customer_Spouse_Name" maxlength="50" />
+
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse date of birth.</span>
+                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
+                            <input type="text" class="form-control datepicker" id="dtp_Spousebirth" name="Customer.Customer_Spouse_DOB" value="@((Model.Customer.Customer_Spouse_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Spouse_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Spouse date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Wedding annniversary date.</span>
+                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
+                            <input type="text" class="form-control datepicker" id="dtp_Weddingannniv" name="Customer.Customer_Wedding_Anniversary" value="@((Model.Customer.Customer_Wedding_Anniversary == DateTime.MinValue ? "" : Model.Customer.Customer_Wedding_Anniversary.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Wedding Anniversary date" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 name.</span>
+                        <input type="text" class="form-control" placeholder="Enter child 1 name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" maxlength="50" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 date of birth.</span>
+                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
+                            <input type="text" class="form-control datepicker" id="dtp_Child1_DOB" name="Customer.Customer_Child1_DOB" value="@((Model.Customer.Customer_Child1_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child1_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 1 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 name.</span>
+                        <input type="text" class="form-control" placeholder="Enter child 2 name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" maxlength="50" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 date of birth.</span>
+                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
+                            <input type="text" class="form-control datepicker" id="dtp_Child2_DOB" name="Customer.Customer_Child2_DOB" value="@((Model.Customer.Customer_Child2_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child2_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 2 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
+                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+    <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
+
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Communication detail.</h4>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no1.</span>
+                        <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile number 1." id="txtCustomer_Mobile1" name="Customer.Customer_Mobile1" value="@Model.Customer.Customer_Mobile1" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no2.</span>
+                        <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile number 2." id="txtCustomer_Mobile2" name="Customer.Customer_Mobile2" value="@Model.Customer.Customer_Mobile2" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no1.</span>
+                        <input type="text" class="mask_phone_no form-control" placeholder="Enter landline number 1." id="txtCustomer_Landline1" name="Customer.Customer_Landline1" value="@Model.Customer.Customer_Landline1" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no2.</span>
+                        <input type="text" class="mask_phone_no form-control" placeholder="Enter landline number 2." id="txtCustomer_Landline2" name="Customer.Customer_Landline2" value="@Model.Customer.Customer_Landline2" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 1.</span>
+                        <input type="text" class="form-control" placeholder="Enter email address 1." id="txtCustomer_Email1" name="Customer.Customer_Email1" value="@Model.Customer.Customer_Email1" maxlength="50" />
+                    </div>
+
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 2.</span>
+                        <input type="text" class="form-control" placeholder="Enter email address 2." id="txtCustomer_Email2" name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" maxlength="50" />
+                    </div>
+                </div>
+
+            </div>
 
     <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height:550px;">
 
@@ -197,103 +293,7 @@
 
     </div>
 
-    <div class="col-md-2" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
-
-        <div class="block">
-            <h4 style="margin-top: 0px;">Communication detail.</h4>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no1.</span>
-                <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile number 1." id="txtCustomer_Mobile1" name="Customer.Customer_Mobile1" value="@Model.Customer.Customer_Mobile1"  />
-            </div>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no2.</span>
-                <input type="text" class="mask_mobile_no form-control" placeholder="Enter mobile number 2." id="txtCustomer_Mobile2" name="Customer.Customer_Mobile2" value="@Model.Customer.Customer_Mobile2"  />
-            </div>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no1.</span>
-                <input type="text" class="mask_phone_no form-control" placeholder="Enter landline number 1." id="txtCustomer_Landline1" name="Customer.Customer_Landline1" value="@Model.Customer.Customer_Landline1"  />
-            </div>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no2.</span>
-                <input type="text" class="mask_phone_no form-control" placeholder="Enter landline number 2." id="txtCustomer_Landline2" name="Customer.Customer_Landline2" value="@Model.Customer.Customer_Landline2"  />
-            </div>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 1.</span>
-                <input type="text" class="form-control" placeholder="Enter email address 1." id="txtCustomer_Email1" name="Customer.Customer_Email1" value="@Model.Customer.Customer_Email1" maxlength="50" />
-            </div>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 2.</span>
-                <input type="text" class="form-control" placeholder="Enter email address 2." id="txtCustomer_Email2" name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" maxlength="50" />
-            </div>
-        </div>
-
-    </div>
-
-    <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-right: 1px solid #DDD; padding: 10px; height: 550px;">
-
-        <div class="block">
-
-            <h4 style="margin-top: 0px;">Secondary information.</h4>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse name.</span>
-                <input type="text" class="form-control" placeholder="Enter spouse name." name="Customer.Customer_Spouse_Name" value="@Model.Customer.Customer_Spouse_Name" maxlength="50"/>
-
-            </div>
-
-            <div class="form-group">
-                <span class="label label-primary label-form" style="margin-bottom: 1px;">Spouse date of birth.</span>
-                <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                <input type="text" class="form-control datepicker" id="dtp_Spousebirth" name="Customer.Customer_Spouse_DOB" value="@((Model.Customer.Customer_Spouse_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Spouse_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Spouse date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
-                <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-            </div>
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Wedding annniversary date.</span>
-                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                        <input type="text" class="form-control datepicker" id="dtp_Weddingannniv" name="Customer.Customer_Wedding_Anniversary" value="@((Model.Customer.Customer_Wedding_Anniversary == DateTime.MinValue ? "" : Model.Customer.Customer_Wedding_Anniversary.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Wedding Anniversary date" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
-                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 name.</span>
-                        <input type="text" class="form-control" placeholder="Enter child 1 name." name="Customer.Customer_Child1_Name" value="@Model.Customer.Customer_Child1_Name" maxlength="50"/>
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 1 date of birth.</span>
-                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                        <input type="text" class="form-control datepicker" id="dtp_Child1_DOB" name="Customer.Customer_Child1_DOB" value="@((Model.Customer.Customer_Child1_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child1_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 1 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
-                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                    </div>
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 name.</span>
-                        <input type="text" class="form-control" placeholder="Enter child 2 name." name="Customer.Customer_Child2_Name" value="@Model.Customer.Customer_Child2_Name" maxlength="50" />
-                    </div>
-
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Child 2 date of birth.</span>
-                        <div class="input-group date" id="dp-2" data-date-format="MM-dd-yyyy">
-                            <input type="text" class="form-control datepicker" id="dtp_Child2_DOB" name="Customer.Customer_Child2_DOB" value="@((Model.Customer.Customer_Child2_DOB == DateTime.MinValue ? "" : Model.Customer.Customer_Child2_DOB.ToString("MM-dd-yyyy")))" readonly placeholder="Enter Child 2 date of birth" />@*Change by Vinod Mane on 22/09/2016 "MM-dd-yyyy" -->"MM/dd/yyyy"*@
-                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
+    <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
 
                 <div class="btn-group">
                     <button type="button" class="btn btn-success active" id="btnSaveCustomer">Save</button>
