--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -14,11 +14,18 @@
 <!-- END BREADCRUMB -->
 <!-- START CONTENT FRAME -->
 <div class="content-frame">
-
+    <input type="hidden" id="hdnPurchaseReport_Id" name="PurchaseOrder.PurchaseReport_Id" value="@Model.PurchaseOrder.PurchaseReport_Id" />
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
         <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Order Management</h2>
+            @if (@Model.PurchaseOrder.PurchaseReport_Id == 1)
+            {
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Order Management</h2>
+            }
+            else
+            {
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Order Report</h2>
+            }
         </div>
     </div>
 
@@ -69,12 +76,12 @@
 
                             <div class="btn-group">
 
-                                <input type="hidden" id="hdnPurchaseReport_Id" name="PurchaseOrder.PurchaseReport_Id" value="@Model.PurchaseOrder.PurchaseReport_Id" />
+
                                 @if (@Model.PurchaseOrder.PurchaseReport_Id == 1)
                                 {
                                     <button type="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
                                     @*<button type="button" class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseOrder">View</button>
-                <button type="button" class="btn btn-info active" disabled value="View" id="btnViewPurchaseOrder">Print</button>*@
+                                        <button type="button" class="btn btn-info active" disabled value="View" id="btnViewPurchaseOrder">Print</button>*@
                                     <button type="button" class="btn btn-danger active edit" disabled value="Edit" id="btnEditPurchaseOrder">View</button>
                                     <button type="button" class="btn btn-info active edit" disabled value="View" id="btnViewPurchaseOrder">Print</button>
                                 }
@@ -99,7 +106,7 @@
         <div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
 
         </div>
-        
+
         <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseOrderPager">
 
 
