--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -17,8 +17,17 @@
 
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
+        <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" name="PurchaseReturn.PurchaseReturnReport_Id" />
         <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return Management</h2>
+            @if (@Model.PurchaseReturn.PurchaseReturnReport_Id == 1)
+            {
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return Management</h2>
+            }
+            else
+            {
+                <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Purchase Return Report</h2>
+            }
+
         </div>
     </div>
 
@@ -79,7 +88,7 @@
                         <div class="col-md-4" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <input type="hidden" id="hdnPurchaseReturnReport_Id" value="@Model.PurchaseReturn.PurchaseReturnReport_Id" />
+
                                 @if (@Model.PurchaseReturn.PurchaseReturnReport_Id == 1)
                                 {
                                     <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
@@ -89,7 +98,7 @@
                                 }
                                 else
                                 {
-                                    <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">View</button>
+                                    <button class="btn btn-danger active" disabled value="Edit" id="btnEditPurchaseReturn">Details</button>
                                 }
 
                             </div>
