--- a/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Barcode/Barcode.cshtml
@@ -1,9 +1,10 @@
 ﻿@model MyLeoRetailer.Models.BarcodeViewModel
 
 <script src="~/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Barcode/barcode_validation.js"></script>
 <script src="~/Scripts/Modules/Barcode/barcode_event.js"></script>
 <script src="~/Scripts/Modules/Barcode/barcode_method.js"></script>
-<script src="~/Scripts/Modules/Barcode/barcode_validation.js"></script>
+
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -27,12 +28,13 @@
 <div class="page-content-wrap">
 
     <div class="row">
+        <form role="form" id="frmBarcodeGenerator">
 
-        <div class="col-md-12" style="padding-top: 10px; padding-left: 10px; padding-right: 10px;">
+            <div class="col-md-12" style="padding-top: 10px; padding-left: 10px; padding-right: 10px;">
 
-            <div class="block">
+                <div class="block">
 
-                <form role="form" id="frmBarcodeGenerator">
+
 
                     <input type="hidden" id="hdf_BarcodeId" name="Barcode.Product_SKU_Barcode_Id" />
 
@@ -53,7 +55,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">SKU Quantity.</span>
-                                <input type="text" class="form-control" placeholder="Enter SKU Quantity." name="Barcode.SKU_Quantity" maxlength="5" />
+                                <input type="text" id="SKUQnty" class="form-control" placeholder="Enter SKU Quantity." name="Barcode.SKU_Quantity" maxlength="5" />
                             </div>
                         </div>
 
@@ -62,52 +64,54 @@
                             <div class="btn-group pull-right">
                                 <button type="button" class="btn btn-success active" value="Search" id="btnGenerate">Generate</button>
                             </div>
-
+                            <div class="btn-group pull-right">
+                                <button type="button" class="btn btn-success active" value="Search" id="btnPrint">Print</button>
+                            </div>
                         </div>
 
                     </div>
 
-                </form>
+
+
+                </div>
+
 
             </div>
 
-
-        </div>
-
-        @*<div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;overflow-y: scroll;height:500px;">
+            @*<div class="col-md-12" id="divDynamicTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;overflow-y: scroll;height:500px;">
 
 
 
-        </div>*@
+            </div>*@
 
-        <div class="col-md-12" id="divTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;overflow-y: scroll;height:500px;">
-            <div class="row">
-                <div class="table-responsive" style="width:100%; margin: 0px 0;">
-                    <table class="table" id="tblBarcode">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Product SKU</th>
-                                <th>Barcode</th>
-                                <th>Barcode Image</th>
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
+            <div class="col-md-12" id="divTable" style="background: rgba(0, 0, 0, 0.06); border-top: 1px solid #DDD; padding-top: 0px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;overflow-y: scroll;height:500px;">
+                <div class="row">
+                    <div class="table-responsive" style="width:100%; margin: 0px 0;">
+                        <table class="table" id="tblBarcode">
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>Product SKU</th>
+                                    <th>Barcode</th>
+                                    <th>Barcode Image</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
+            @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
-        <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divBarcodePager">
+            <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divBarcodePager">
 
 
-        </div>*@
-
+            </div>*@
 
 
 
+        </form>
 
 
     </div>
